--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
+    "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
