--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.428.0",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -35,6 +36,7 @@
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-share": "^5.1.0",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.2",
